tests/typing/bad/testfile-this2-1.scala
class A { def m() { var b: B = this } }

class B extends A { }

object Main { def main(args: Array[String]) { } }
